# agro-business-dashboard

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agrobusiness/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
agrobusiness/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: adminuser.json  state.json  test_data.json
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: nginx.conf
tests/agrobusiness/: conftest.py  test_customer_endpoints.py  test_farm_endpoints.py  test_models.py  test_planting_endpoints.py  test_state_endpoints.py  test_token.py
