[project]
name = "backoffice-service"
version = "1.0"
description = ""
authors = [{ name = "Renan Penna", email = "renan.penna.tech@gmail.com" }]
license = { text = "NoLicense" }
readme = "README.md"
keywords = ["Challenge", "Agro Business", "Dashboard"]
classifiers = ["Development Status :: 1 -Alpha"]

[project.urls]
homepage = "https://github.com/xarpy/agro-business-dashboard"


[tool.black]
line-length = 120
exclude = ".git,__pycache__,__init__.py,.mypy_cache,.pytest_cache"

[tool.isort]
skip = [".gitignore"]
extend_skip = [".md", ".json"]
profile = "black"
line_length = 120
force_grid_wrap = 0
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 60
exclude = ["tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.mypy]
exclude = ["tests"]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true
ignore_missing_imports = true
implicit_reexport = false

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
DJANGO_SETTINGS_MODULE="core.settings"
python_functions = ["test"]
log_cli = true
log_level = "INFO"
python_files = ["test_*.py", "*_test.py", "tests/*.py"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agrobusiness/*"]
omit = []

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.coverage.html]
title = "Report Coverage Challenge"
directory = "templates/coverage"
